# lil_bro

./: .coverage  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  LICENSE.md  README.md  TODOS.md  build.py  install_deps.ps1  lil_bro.spec  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: safety-reviewer.md
.claude/hooks/: serena_guard.py
.gstack/: pr-body.md
.serena/: project.yml
.serena/memories/: spec_audit_resolved.md  (+2 more)
current-artifact/: Old_mplementation_plan.md  implementation_plan.md
development-timeline/: Week_1_poc_walkthrough.md  Week_2_poc_walkthrough.md  Week_3_poc_rearch_walkthrough.md
docs/: ARCHITECTURE.md  Claude_Integration.md  DONE.md  DONE_Prompt.md  NPI_Base_Profile_Export_Example.nip  NPI_CustomSettingNames.xml  REFACTORING_PLAN.md  ROADMAP.md  TODO_Prompt.md  ami_smi.txt  design-preview.html  dlss_4_5_presets_by_gpu.json  dlss_preset_framework.md  figma-prototype.html  npi-open-items.md  nvidia-profile-inspector.md  office-hours-design-20260323.md  pipeline-rescan-idempotency-plan.md  plan-fix-npi-micoffigs.md  plan-revert-feature.md  refactor-main-implementation-plan.md  technical_audit.md  thermal-temp-plan.md  todos.md  week5_implementation_plan.md
lil_bro/: full_specs.json
lil_bro_backups/: session_latest.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
scripts/: mock_fixtures.py  mock_gui.py  regen_app_icon.py
src/: bootstrapper.py  config.py  console_attach.py  main.py
tests/: conftest.py  test_action_logger.py  test_action_proposer.py  test_action_proposer_gui.py  test_admin_notifier.py  test_ai_setup_dialog.py  test_app_cleanup.py  test_approval_dialog.py  test_approval_handler_registry.py  test_approval_unit.py  test_batch_selection_dialog.py  test_benchmark_row.py  test_benchmark_runner.py  test_bootstrapper.py  test_cancel_flow.py  test_cap_notifier.py  test_cli_unchanged.py  test_config.py  test_confirm_dialog.py  test_console_attach.py  test_dashboard.py  test_debug_logger.py  test_dialogs.py  test_display.py  test_display_setter.py  test_display_utils.py  test_dlss_presets.py  test_dump_parser.py  test_fix_dispatch.py  test_foreground.py  test_formatting.py  test_formatting_sink.py  test_game_mode.py  test_game_mode_card.py  test_gui_bridge.py  test_integrity.py  test_last_run_card.py  test_lhm_sidecar.py  test_main_window.py  test_menu.py  (+55 more)
tests-manual/: test_single_py_output.py
(+239 files in other folders)
