[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lil_bro"
version = "0.5.0"
description = "A local, privacy-first AI agent that optimizes your gaming PC for peak performance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Antigravity", email = "antigravity@example.com" }
]
# System dependency (not enforced by uv/pip): .NET 8 SDK is required to build
# lhm-server.exe (tools/lhm-server/). The runtime (.NET 8 Runtime) is required
# to run lhm-server.exe at startup. Download: https://dotnet.microsoft.com/download/dotnet/8.0
dependencies = [
    "wmi>=1.5.1; sys_platform == 'win32'",
    "psutil>=5.9.8",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.4.0",
    "installer",
]
llm = [
    "llama-cpp-python>=0.3.0",
]

[project.scripts]
lil_bro = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.lil_bro.system-requirements]
# Informational only — not enforced by uv/pip.
# These must be installed manually before building or running lil_bro.
dotnet-sdk = ">=8.0"
dotnet-sdk-purpose = "Required to build tools/lhm-server/ (C# LibreHardwareMonitor sidecar)"
dotnet-runtime = ">=8.0"
dotnet-runtime-purpose = "Required to run lhm-server.exe at startup for thermal monitoring"
dotnet-download = "https://dotnet.microsoft.com/download/dotnet/8.0"

[tool.uv]
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
